# tan-libs

./: Cargo.toml  README.md  install.sh
@std/: readme.text
@std/ansi/: escape.tan
@std/cli/: cli.tan
@std/color/: links.text
@std/glue/: readme.text
@std/glue/fs-util/: readme.text  util.tan
@std/glue/gen-util/: readme.text  util.tan
@std/glue/shell-util/: readme.text
@std/html/: util.tan
@std/iter/: fn.tan
@std/language/: readme.text
@std/math/: constants.tan
@std/process/: readme.md
@std/seq/: fn.tan
@std/statistics/descriptive/: change.tan
@std/testing/: assert.tan
crates/dummy/: Cargo.toml
crates/dummy/src/: lib.rs
crates/foreign-core/: Cargo.toml
crates/lib-cmark/: Cargo.toml
crates/lib-cmark/src/: cmark.rs  lib.rs
crates/lib-codec-uri/: Cargo.toml  README.md
crates/lib-codec-uri/src/: lib.rs
crates/lib-core/: Cargo.toml  README.md
crates/lib-core/src/: arithmetic.rs  bool.rs  char.rs  chrono.rs  cmp.rs  css_expr.rs  dec.rs  eq.rs  fs.rs  html.rs  io.rs  lib.rs  map.rs  path.rs  prelude.rs  regex.rs  rng.rs  set.rs  string.rs  testing.rs  u8.rs  uuid.rs
crates/lib-core/src/math/: complex.rs
crates/lib-http-client/: Cargo.toml
crates/lib-http-client/src/: http_client.rs
crates/lib-http-server/: Cargo.toml
crates/lib-http-server/src/: http_server.rs  lib.rs
crates/lib-image-png/: Cargo.toml
crates/lib-image-png/src/: lib.rs
crates/lib-tan-chrono/: Cargo.toml  README.md  install.sh
crates/lib-tan-chrono/src/: chrono.rs  duration.rs  instant.rs  lib.rs
crates/lib-tan-cmark/: Cargo.toml  install.sh
crates/lib-tan-cmark/src/: cmark.rs
crates/lib-tan-codec-json/: Cargo.toml  install.sh
crates/lib-tan-codec-json/src/: json.rs  lib.rs
crates/lib-tan-codec-uri/: Cargo.toml  install.sh
crates/lib-tan-codec-uri/src/: lib.rs
crates/lib-tan-core/: Cargo.toml  README.md
crates/lib-tan-core/src/: arithmetic.rs  array.rs  bool.rs  buffer.rs  char.rs  cmp.rs  dec.rs  eq.rs  error.rs  float.rs  int.rs  io.rs  lang.rs  lib.rs  map.rs  math.rs  maybe.rs  outcome.rs  path.rs  prelude.rs  process.rs  range.rs  seq.rs  set.rs  string.rs  try.rs  u8.rs
crates/lib-tan-core/src/math/: complex.rs
crates/lib-tan-cron/: Cargo.toml  install.sh
crates/lib-tan-cron/src/: cron.rs  lib.rs
crates/lib-tan-css-expr/: Cargo.toml  install.sh
crates/lib-tan-css-expr/src/: css_expr.rs  lib.rs
crates/lib-tan-fs/: Cargo.toml  install.sh
crates/lib-tan-fs/src/: fs.rs  lib.rs
crates/lib-tan-html/: Cargo.toml  README.md  install.sh
crates/lib-tan-html/src/: html.rs  lib.rs
crates/lib-tan-http-client/: Cargo.toml  install.sh
crates/lib-tan-http-client/src/: http_client.rs
crates/lib-tan-http-server/: Cargo.toml  install.sh
crates/lib-tan-http-server/docs/: todo.md
crates/lib-tan-http-server/src/: http_server.rs
crates/lib-tan-image-png/: Cargo.toml  install.sh
crates/lib-tan-image-png/src/: png.rs
crates/lib-tan-regex/: Cargo.toml  install.sh
crates/lib-tan-regex/src/: lib.rs  regex.rs
crates/lib-tan-rng/: Cargo.toml  README.md  install.sh
crates/lib-tan-rng/src/: lib.rs  rng.rs
crates/lib-tan-text/: Cargo.toml  install.sh
crates/lib-tan-text/src/: lib.rs  text.rs
crates/lib-tan-uuid/: Cargo.toml  install.sh
crates/lib-tan-uuid/src/: lib.rs  uuid.rs
crates/tan-lib-cmark/: Cargo.toml
crates/tan-lib-cmark/src/: cmark.rs
crates/tan-lib-codec-uri/: Cargo.toml
crates/tan-lib-core/: Cargo.toml  README.md
crates/tan-lib-core/src/: buffer.rs  error.rs  float.rs  int.rs  json.rs  lang.rs  lib.rs  maybe.rs  process.rs  range.rs  seq.rs  uuid.rs
crates/tan-lib-http-client/: README.md
crates/tan-lib-http-client/src/: http_client.rs  lib.rs
crates/tan-lib-http-server/: Cargo.toml
crates/tan-lib-http-server/src/: http_server.rs  lib.rs
crates/tan-lib-image-png/src/: png.rs
docs/: seq.md  statistics.md  todo.md
etc/docs/: decisions.md
