[package]
name = "lib-tan-chrono"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "tanchrono"
crate-type = ["dylib"]

[dependencies]
tan.workspace = true
chrono = { version = "0.4" }

[dev-dependencies]
assert_matches.workspace = true
