[package]
name = "lib-tan-codec-json"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "tancodecjson"
crate-type = ["dylib"]

# #todo Move some of the dependencies to the workspace Cargo file?

[dependencies]
tan.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

[dev-dependencies]
assert_matches = "1.5"
