[package]
name = "lib-tan-core"
description = "The Tan language"
repository = "https://github.com/tan-language/tan-libs/crate/lib-tan-core"
keywords = ["tan", "std", "core", "library"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "tancore"

[dependencies]
tan.workspace = true
libloading = "0.8"
regex = { version = "1" }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
rand = "0.8"
rust_decimal = { version = "1.32", optional = true }
rust_decimal_macros = { version = "1.32", optional = true }
# #todo consider chrono features and making optional
chrono = { version = "0.4" }

[dev-dependencies]
assert_matches = "1.5"

[features]
default = ["dec", "json"]
dec = ["dep:rust_decimal", "dep:rust_decimal_macros"]
json = ["dep:serde", "dep:serde_json"]
