[package]
name = "lib-tan-core"
description = "The core library"
repository = "https://github.com/tan-language/tan-libs/crate/lib-tan-core"
keywords = ["tan", "std", "core", "library"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "tancore"

[dependencies]
tan.workspace = true
rust_decimal = { version = "1.32" }
rust_decimal_macros = { version = "1.32" }
libloading = "0.8"

[dev-dependencies]
assert_matches = "1.5"
