[package]
name = "lib-tan-http-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "tanhttpclient"
crate-type = ["dylib"]

[dependencies]
tan.workspace = true
# todo use the non-blocking version, now we include tokio!
reqwest = { version = "0.12", features = ["blocking"] }
