[package]
name = "lib-tan-http-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "tanhttpserver"
crate-type = ["dylib"]

[dependencies]
tan.workspace = true
# todo is there a way to reuse tokio from tan?
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7" }
url = { version = "2.5" }
tower-http = { version = "0.5", features = ["fs"] }
mime_guess = { version = "2.0" }
